objects/EUR_CRM_Customer_Taxonomy__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Banner__c</fullName>
        <description>Banner</description>
        <label>Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Chain__c</fullName>
        <description>EUR DE Customer Taxonomy</description>
        <label>Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DE_Group_KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group KAM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>EUR DE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>EUR_DE_Customer_Taxonomy_Group_KAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DE_Regio_KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up the KAM for the Region that this taxonomy belongs to</description>
        <label>Regio KAM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>EUR DE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>EUR_DE_Customer_Taxonomy_Regio_KAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key_Account_Hard_Facts_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Key Account Hard Facts Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Leaflet_Campaign_Lead_Time_Weeks__c</fullName>
        <label>Leaflet Campaign Lead Time (Weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Level1_Name__c</fullName>
        <label>Level 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Level2_Name__c</fullName>
        <label>Level 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Level_1__c</fullName>
        <description>EUR DE Customer Taxonomy</description>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Level_2__c</fullName>
        <description>EUR DE Customer Taxonomy</description>
        <label>Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Level_3__c</fullName>
        <description>EUR DE Customer Taxonomy</description>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Management_Type__c</fullName>
        <label>Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regie</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a field created for the mapping between Customer Taxonomy and Group Outlet Type. 
For PROFS, there is a &quot;Force GroupOutletType/OutletType by CT” checkbox to ask Manager whether they want to force GOT and OT. When the &quot;Force GroupOutletType/OutletType by CT” checkbox is checked and saved, the GOT and OT will be automatically populated according to the customer taxonomy mapping.</description>
        <label>PRS Group Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a field created for the mapping between Customer Taxonomy and Outlet Type. 
For PROFS, there is a &quot;Force GroupOutletType/OutletType by CT” checkbox to ask Manager whether they want to force GOT and OT. When the &quot;Force GroupOutletType/OutletType by CT” checkbox is checked and saved, the GOT and OT will be automatically populated according to the customer taxonomy mapping.</description>
        <label>PRS Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Outlet_Type__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Planogram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planogram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Store_Audit_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Audit Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Chain__c</fullName>
        <label>Sub-Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TriggerMassUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriggerMassUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VF_When_Cust_Active__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a new field to cater the new requirement of PR BG.

When Account Record Type = Modern Off Trade:
o    Visit Frequency will be populated after Customer Taxonomy is selected
o    when Customer Taxonomy = BG_OFF_Indirect KAs, it will further check the Account Status,
        -   if Account Status = Active, Visit Frequency = Once every 2 weeks;
        -   if Account Status = Prospect, Visit Frequency = Once each quarter.</description>
        <label>Visit Frequency When Active</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU) (Visit Frequency When Active)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VF_When_Cust_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a new field to cater the new requirement of PR BG.

When Account Record Type = Modern Off Trade:
o    Visit Frequency will be populated after Customer Taxonomy is selected
o    when Customer Taxonomy = BG_OFF_Indirect KAs, it will further check the Account Status,
        -   if Account Status = Active, Visit Frequency = Once every 2 weeks;
        -   if Account Status = Prospect, Visit Frequency = Once each quarter.</description>
        <label>Visit Frequency When Prospect</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU) (Visit Frequency When Prospect)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VF_When_Delivery_Is_Direct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a new field to cater the new requirement of PR BG.

When Account Record Type = Wholesalers:
o    Visit Frequency will be populated after Delivery Type is selected
	- if Delivery Type = Direct:  Visit Frequency = Once per week
	- if Delivery Type = Indirect:  Visit Frequency = Once every 2 weeks</description>
        <label>Visit Frequency When Direct</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU) (Visit Frequency When Direct)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VF_When_Delivery_is_Indirect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a new field to cater the new requirement of PR BG.

When Account Record Type = Wholesalers:
o    Visit Frequency will be populated after Delivery Type is selected
	- if Delivery Type = Direct:  Visit Frequency = Once per week
	- if Delivery Type = Indirect:  Visit Frequency = Once every 2 weeks</description>
        <label>Visit Frequency When Indirect</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU) (Visit Frequency When Indirect)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Vertriebsregion__c</fullName>
        <description>for EUR DE</description>
        <label>Vertriebsregion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real VR 01 Nord</fullName>
                </value>
                <value>
                    <fullName>Real VR 02 Süd</fullName>
                </value>
                <value>
                    <fullName>Real VR 03 Ost</fullName>
                </value>
                <value>
                    <fullName>Real VR 04 West</fullName>
                </value>
                <value>
                    <fullName>Real VR 04 Südwest</fullName>
                </value>
                <value>
                    <fullName>Kaufland Nord</fullName>
                </value>
                <value>
                    <fullName>Kaufland Ost</fullName>
                </value>
                <value>
                    <fullName>Kaufland West</fullName>
                </value>
                <value>
                    <fullName>Kaiser&apos;s Tengelmann Reg. Mün</fullName>
                </value>
                <value>
                    <fullName>Kaiser&apos;s Tengelmann Reg. Ost</fullName>
                </value>
                <value>
                    <fullName>Kaiser&apos;s Tengelmann Reg.West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup field created for BG to lookup the Visit Frequency.</description>
        <label>Visit Frequency</label>
        <referenceTo>EUR_CRM_Visit_Frequency__c</referenceTo>
        <relationshipLabel>Customer Taxonomy (EU)</relationshipLabel>
        <relationshipName>Customer_Taxonomy_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Customer_Format__c</fullName>
        <label>Customer Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Taxonomy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>EUR_CRM_JB_Template__c</referenceTo>
        <relationshipName>Customer_Taxonomy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Taxonomy (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Sub_Chain__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_BE_All_Customer_Taxonomy_Data_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group__c</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Banner__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_Visit_Frequency__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_BE_Customer_Taxonomy</value>
        </filters>
        <label>EUR BE All Customer Taxonomy Data View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_Customer_Taxonomy_Data</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type__c</columns>
        <columns>EUR_CRM_VF_When_Cust_Active__c</columns>
        <columns>EUR_CRM_VF_When_Cust_Prospect__c</columns>
        <columns>EUR_CRM_VF_When_Delivery_Is_Direct__c</columns>
        <columns>EUR_CRM_VF_When_Delivery_is_Indirect__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_BG_Modern_Off_Trade_Customer_Taxonomy</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_BG_Traditional_Off_Trade_Customer_Taxonomy</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_BG_Wholesalers_Customer_Taxonomy</value>
        </filters>
        <label>EUR BG Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Customer_Taxonomy_Data_View</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Level_1__c</columns>
        <columns>EUR_CRM_Level_2__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_PT_Off_Trade_Customer_Taxonomy</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_PT_CandCs_Customer_Taxonomy</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_PT_Wholesalers_Customer_Taxonomy</value>
        </filters>
        <label>EUR PT All Customer Taxonomy Data View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Chain_Name__c</columns>
        <columns>EUR_CRM_Level_1__c</columns>
        <columns>EUR_CRM_Level1_Name__c</columns>
        <columns>EUR_CRM_Level_2__c</columns>
        <columns>EUR_CRM_Level2_Name__c</columns>
        <columns>EUR_CRM_Level_3__c</columns>
        <columns>EUR_CRM_Level_4__c</columns>
        <columns>EUR_CRM_Level_5__c</columns>
        <columns>EUR_CRM_Level_6__c</columns>
        <columns>EUR_CRM_Level_7__c</columns>
        <columns>EUR_CRM_Level_8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_DE_Customer_Taxonomy</value>
        </filters>
        <label>EUR DE Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Customer_Taxonomy</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Sub_Chain__c</columns>
        <columns>EUR_JB_Template__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_DK_Customer_Taxonomy</value>
        </filters>
        <label>EUR DK Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_OFF_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Sub_Chain__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_FI_OFF_Trade_Customer_Taxonomy</value>
        </filters>
        <label>EUR FI OFF Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_ON_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_Sub_Chain__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_FI_ON_Trade_Customer_Taxonomy</value>
        </filters>
        <label>EUR FI ON Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Level_1__c</columns>
        <columns>EUR_CRM_Level_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_MA_Off_Trade_Customer_Taxonomy</value>
        </filters>
        <label>EUR MA Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Sub_Chain__c</columns>
        <columns>EUR_CRM_Level_1__c</columns>
        <columns>EUR_CRM_Level_2__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_RU_OFF_Trade_Customer_Taxonomy</value>
        </filters>
        <label>EUR RU Customer Taxonomy</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Customer_Taxonomy</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Chain__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Level_1__c</columns>
        <columns>EUR_CRM_Level_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Customer_Taxonomy__c.EUR_ZA_Off_Trade_Customer_Taxonomy,EUR_CRM_Customer_Taxonomy__c.EUR_ZA_On_Trade_Customer_Taxonomy</value>
        </filters>
        <label>EUR ZA Customer Taxonomy</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Outlet Taxonomy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Taxonomy (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR BE Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Modern_Off_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR BG Modern Off Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Traditional_Off_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR BG Traditional Off Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Wholesalers_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR BG Wholesalers Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>DE Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR DE WS Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Customer_Taxonomy</fullName>
        <active>true</active>
        <description>Record Type for DK Customer Taxonomy (OFF Trade)</description>
        <label>EUR DK Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_OFF_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR FI OFF Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_ON_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR FI ON Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Off_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR MA Off Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_CandCs_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR PT CandCs Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Wholesalers_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR PT Wholesalers Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_OFF_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <description>RU OFF Trade</description>
        <label>EUR RU OFF Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Off_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR ZA Off Trade Customer Taxonomy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Customer_Taxonomy</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Customer Taxonomy</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>